# excelTool

./: .gitignore  SPEC.md  create-icons.ps1  index.html  package-lock.json  package.json  vite.config.ts
docs/: database-design.md
src/: App.vue  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  excel.rs  formula.rs  machine_id.rs  main.rs
src/components/: ExcelViewer.vue  SheetViewer.vue  SideBar.vue
src/components/contract/: ContractAddModal.vue  ContractEditModal.vue
src/components/quote/: QuoteCreateContractModal.vue  QuoteEditModal.vue
src/components/sales/: SalesDeleteConfirm.vue  SalesDetailModal.vue  SalesEditModal.vue
src/composables/: useContractForm.ts  useContractView.ts  useCopyCell.ts  useDataManager.ts  useExport.ts  useQuoteView.ts  useSalesView.ts
src/constants/: columns.ts  salesColumns.ts
src/stores/: navigation.ts
src/views/: ContractView.vue  DataManager.vue  QuoteView.vue  SalesView.vue
src/views/tabs/: SalesTable.vue
