[package]
name = "excel-tool"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.24"
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
winreg = "0.52"
thiserror = "1.0"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
